# rust-shell

./: .gitignore  Cargo.toml  README.md  run_tests
src/: command.rs  job_handle.rs  job_spec.rs  lib.rs  local_shell.rs  pgtest.rs  pipe_capture.rs  process_manager.rs  raw_lib_test.rs  result.rs  runtest.rs  shell_child.rs  shell_command.rs  signal_handler.rs  terminal_test.rs
tests/: lib.rs  shell_tests.rs  terminal_test.rs
