[package]
name = "shell"
version = "0.1.0"
authors = ["Daichi Hirono <hidachinoiro@gmail.com>"]

[[bin]]
name = "runtest"
path = "src/runtest.rs"

[dependencies]
stderrlog = "0.2.3"
errno = "*"
lazy_static = "1.0"
libc = "0.2"
log = "0.3.8"
regex = "0.2"

[dependencies.nom]
version = "^3.2"
features = ["regexp"]
